# GemVM

./: CMakeLists.txt  Error.gem  GemError.h  GemFile.h  GemIterator.h  GemMath.h  GemVM  GemWindow.h  Iterator.gem  Math.c  Math.gem  Math.h  README.md  Window.gem  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  deserialize.c  deserialize.h  deserializeBytecode.c  deserializeBytecode.h  deserializeMemory.c  deserializeMemory.h  fileMethods.c  fileMethods.h  listMethods.c  main.c  memory.c  memory.h  object.c  object.h  sample.gem  scanner.c  scanner.h  serialize.c  serialize.h  stringMethods.c  (+8 more)
3dRenderer/: bytecode  main.gem  main.gemc  test.gem  utils.gem
Compiler/: chunk.gem  compiler.gem  compiler.gemc  debug.gem  engine.gem  fileCompiler.gem  fileCompiler.gemc  hi.gem  object.gem  scanner.gem  serialize.gem  sourceCompiler.gem  sourceCompiler.gemc  test.gem
Network/: W1.txt  W2.txt  W3.txt  b1.txt  b2.txt  b3.txt  compiler.gemcc  network.gem  network.gemc  test.gem  test.gemc
Raycast/: compiler.gemc  engine.gem  engine.gemc  raycast  raycast.gem  raycast.gemc
chess/: Board.gem  Game.gem  Piece.gem  chess.gemc  compiler.gemc  main.gem  main.gemc
chess/pieces/: Bishop.gem  King.gem  Knight.gem  Pawn.gem  Queen.gem  Rook.gem
termbox2/: termbox2.h
test/: lambda.gem  lambda.gemc
